# education-q

./: README.md  pyproject.toml  requirements.txt
DL/: Meeting 260606.docx  Seminar.xlsx
DL/Duy/: CORRECTIONS.md
DL/Khue/: CORRECTIONS.md
DL/Khue/Legacy/: educationq-full-prep-document.md  educationq-presentation-notes.md  educationq-team-review.md  readme.docx
DL/Nghi/: CORRECTIONS.md
DL/Nhan/data/input/: README.md  config_teacher0shot_gpqa_diamond.yaml  config_teacher0shot_mmlupro_stratified.yaml  config_template.yaml  educationq_benchmark.yaml
DL/Nhan/dataset/: README.md
DL/Nhan/dataset/gpqa/prompts/: chain_of_thought_examples.json
DL/Nhan/dataset/mmlu-pro/: mmlu_pro_stratified.json
DL/Nhan/docs/: benchmark_protocol.md  educationq_paper_note_vi.md
DL/Phu/: CORRECTIONS.md
docs/: demo-framework.vi.md  framework-how-it-works.vi.md
examples/: demo_framework_transcript.py  demo_minimal.yaml  demo_ui.py
webapp/: README.md
webapp/public/data/: questions.json
webapp/scripts/: build_dataset.py
webapp/src/app/: globals.css  layout.tsx  page.tsx
webapp/src/app/api/teacher/: route.ts
webapp/src/app/demo/: DemoClient.tsx  page.tsx
webapp/src/app/results/: page.tsx
webapp/src/components/: BarRow.tsx  NavBar.tsx
webapp/src/components/demo/: ChatBubble.tsx  FreeChatPanel.tsx  ReplayPanel.tsx  TeacherConfigPanel.tsx
webapp/src/lib/: llmClient.ts  paperData.ts  prompts.ts  replayCases.ts  types.ts
